Fix - TH 1st rows is centered. now all TH are lefty aligned

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -379,6 +379,7 @@ table {
 table th{
   padding: 6px 13px;
   border: 1px solid #dfe2e5;
+  text-align: left;
 }
 
 table td{
